Modify add friend route
