# swagger.yml
@@ -103,23 +103,6 @@
             description: 'Bad Request'
           500:
             description: 'Server Error'
-      put:
-        description: Add a friend
-        tags:
-          - user
-        requestBody:
-          required: true
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Friend'
-        responses:
-          204:
-            description: Friend added successfully
-          400:
-            description: Bad Request
-          500:
-            description: Server Error
     /users/{userId}/friends/{friendId}:
       parameters:
         - in: path
@@ -134,6 +117,17 @@
           required: true
           schema:
             $ref: '#/components/schemas/ObjectId'
+      put:
+        description: Add a friend
+        tags:
+          - user
+        responses:
+          204:
+            description: Friend added successfully
+          400:
+            description: Bad Request
+          500:
+            description: Server Error
       delete:
         description: Remove a friend
         tags:
@@ -338,13 +332,6 @@
           birthday:
             type: string
             format: date
-      Friend:
-        type: object
-        properties:
-          friend:
-            type: string
-            minLength: 24
-            maxLength: 24
       Location:
         type: object
         properties:
